revert to java 18