@@ -14,15 +14,16 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>20</source>
-                    <target>20</target>
+                    <source>18</source>
+                    <target>18</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <java.version>20</java.version>
+        <java.version>18</java.version>
         <org.springframework.spring-web.version>6.0.7</org.springframework.spring-web.version>
         <org.springframework.validation.version>3.0.4</org.springframework.validation.version>
         <com.google.guava.version>31.1-jre</com.google.guava.version>
